--- a/Clase1/views/index.html
+++ b/Clase1/views/index.html
@@ -33,20 +33,24 @@
     </ul>
 </nav>
 </header>
-<div class="basado"><section><strong><div class="titulares">Basado en tu última visita</strong></div>
-<article><img src="img/img-cafetera-moulinex.jpg" width="300" height="auto"><br>
+<section class="basado"><strong><div class="titulares">Basado en tu última visita</strong></div>
+<article class="articulo"><div class="foto"><img src="img/img-cafetera-moulinex.jpg" width = 90% ><br></div>
+    <i class="fas fa-truck"></i>
 <div class="precios">$ 6.770<br></div>
-<div class="descuento">40% off<br</div>>
+<div class="descuento">40% off<br></div>
 <strong><div class="descripcion">Cafetera Moulinex</strong></article></div>
-<article><img src="img/img-macbook-pro-2019.jpg" width="300" height="auto"><br>
-<div class="precios">$230.000<br</div>>
-<div class="descuento">20% off<br</div>>
+<article class="articulo"><div class="foto"><img src="img/img-macbook-pro-2019.jpg" width = 90% ><br></div>
+    <i class="fas fa-truck"></i>
+<div class="precios">$230.000<br></div>
+<div class="descuento">20% off<br></div>
 <strong><div class="descripcion">MacBook Pro 2019</strong><br></article></div>
-<article><img src="img/img-samsung-galaxy-s10.jpg" width="300" height="auto"><br>
+<article class="articulo"><div class="foto"><img src="img/img-samsung-galaxy-s10.jpg" width = 90% ><br></div>
+    <i class="fas fa-truck"></i>
 <div class="precios">$70.500<br></div>
-<div class="descuento">10% off<br</div>>
+<div class="descuento">10% off<br></div>
 <strong><div class="descripcion">Samsung Galaxy S10</strong><br></article></div>
-<article><img src="img/img-tv-samsung-smart.jpg" width="300" height="auto"><br>
+<article class="articulo"><div class="foto"><img src="img/img-tv-samsung-smart.jpg" width = 90% ><br></div>
+    <i class="fas fa-truck"></i>
 <div class="precios">$23.200<br></div>
 <div class="descuento">5% off<br></div>
 <strong><div class="descripcion">SmartTv Samsung 43"</strong></article></div>
@@ -60,7 +64,7 @@ puntos de pago. ¡Y siempre es seguro!</article>
 <article> <strong>● Envío gratis desde $ 2.500</strong><br>
 Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de<br>
 productos. Es un beneficio de Mercado Puntos.</article>
-<i class="fas fa-user-shield"></i><br>
+<i class="fas fa-user-shield"></i><br></div>
 <article> <strong>● Seguridad, de principio a fin</strong><br>
 ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,<br>
 porque estás siempre protegid@.</article>
