--- a/Clase1/views/index.html
+++ b/Clase1/views/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-    <img src="img/logo-mercado-liebre.svg" alt="Logo"  width="auto" height="auto"><br>
-    <input type="search"> <i class="fas fa-search"></i>Barra de busqueda</input>
+    <div class="encabezado"><img src="img/logo-mercado-liebre.svg" alt="Logo" class="logo"><br>
+    <span class="buscador"><input type="search" placeholder="Buscar productos, marcas"> <i class="fas fa-search"></i></input></span></div>
     <p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
     <nav>
     <ul>
@@ -24,8 +24,8 @@
         <li><a href="#" class="navigation">Ayuda</a></li>
     </ul>
     <ul>
-        <li><a href="#" class="navigation">Creá cuenta<i class="fas fa-id-card"></i></a></li>
-        <li><a href="#" class="navigation">Ingesá<i class="fas fa-sign-in-alt"></i></a></li>
+        <li><a href="register" class="navigation">Creá cuenta<i class="fas fa-id-card"></i></a></li>
+        <li><a href="login" class="navigation">Ingesá<i class="fas fa-sign-in-alt"></i></a></li>
         <li><a href="#" class="navigation">Mis compras<i class="fas fa-shopping-basket"></i></a></li>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
@@ -33,28 +33,51 @@
     </ul>
 </nav>
 </header>
-<section class="basado"><strong><div class="titulares">Basado en tu última visita</strong></div>
+<main><section class="basado"><strong><div class="titulares">Basado en tu última visita</strong></div>
 <article class="articulo"><div class="foto"><img src="img/img-cafetera-moulinex.jpg" width = 90% ><br></div>
-    <i class="fas fa-truck"></i>
-<div class="precios">$ 6.770<br></div>
-<div class="descuento">40% off<br></div>
+   <div class="camion"> <i class="fas fa-truck"></i></div>
+    <span class="precio-descuento"><div class="precios">$ 6.770<br></div>
+<div class="descuento">40% off<br></div></span>
 <strong><div class="descripcion">Cafetera Moulinex</strong></article></div>
 <article class="articulo"><div class="foto"><img src="img/img-macbook-pro-2019.jpg" width = 90% ><br></div>
-    <i class="fas fa-truck"></i>
-<div class="precios">$230.000<br></div>
-<div class="descuento">20% off<br></div>
+    <div class="camion"><i class="fas fa-truck"></i></div>
+    <span class="precio-descuento"><div class="precios">$230.000<br></div>
+<div class="descuento">20% off<br></div></span>
 <strong><div class="descripcion">MacBook Pro 2019</strong><br></article></div>
 <article class="articulo"><div class="foto"><img src="img/img-samsung-galaxy-s10.jpg" width = 90% ><br></div>
-    <i class="fas fa-truck"></i>
-<div class="precios">$70.500<br></div>
-<div class="descuento">10% off<br></div>
+    <div class="camion"> <i class="fas fa-truck"></i></div>
+    <span class="precio-descuento"><div class="precios">$70.500<br></div>
+<div class="descuento">10% off<br></div></span>
 <strong><div class="descripcion">Samsung Galaxy S10</strong><br></article></div>
 <article class="articulo"><div class="foto"><img src="img/img-tv-samsung-smart.jpg" width = 90% ><br></div>
-    <i class="fas fa-truck"></i>
-<div class="precios">$23.200<br></div>
-<div class="descuento">5% off<br></div>
+    <div class="camion">  <i class="fas fa-truck"></i></div>
+<span class="precio-descuento"><div class="precios">$23.200<br></div>
+<div class="descuento">5% off<br></div></span>
 <strong><div class="descripcion">SmartTv Samsung 43"</strong></article></div>
 </section></div>
+<footer><section>
+<section class="ofertas"><strong><div class="titulares">Ofertas</strong></div>
+<article class="articulo"><div class="foto"><img src="img/img-cafetera-moulinex.jpg" width = 90% ><br></div>
+    <div class="camion"> <i class="fas fa-truck"></i></div>
+    <span class="precio-descuento"><div class="precios">$ 6.770<br></div>
+<div class="descuento">40% off<br></div></span>
+<strong><div class="descripcion">Cafetera Moulinex</strong></article></div>
+<article class="articulo"><div class="foto"><img src="img/img-macbook-pro-2019.jpg" width = 90% ><br></div>
+    <div class="camion">  <i class="fas fa-truck"></i></div>
+    <span class="precio-descuento"><div class="precios">$230.000<br></div>
+<div class="descuento">20% off<br></div></span>
+<strong><div class="descripcion">MacBook Pro 2019</strong><br></article></div>
+<article class="articulo"><div class="foto"><img src="img/img-samsung-galaxy-s10.jpg" width = 90% ><br></div>
+    <div class="camion">  <i class="fas fa-truck"></i></div>
+    <span class="precio-descuento"><div class="precios">$70.500<br></div>
+<div class="descuento">10% off<br></div></span>
+<strong><div class="descripcion">Samsung Galaxy S10</strong><br></article></div>
+<article class="articulo"><div class="foto"><img src="img/img-tv-samsung-smart.jpg" width = 90% ><br></div>
+    <div class="camion"> <i class="fas fa-truck"></i></div>
+    <span class="precio-descuento"><div class="precios">$23.200<br></div>
+<div class="descuento">5% off<br></div></span>
+<strong><div class="descripcion">SmartTv Samsung 43"</strong></article></div>
+</section></div></main>
 <footer><section>
     <i class="fas fa-credit-card"></i><br>
 <div class="cuerpotexto"><article> <strong>● Pagá con tarjeta o en efectivo<br></strong>
